[project]
name = "rotate_image"
version = "0.0.2"
authors = [
  { name="Andrew Moreira", email="andrewsantos9113@gmail.com" },
]
description = "Utility to rotate images"
readme = "README.md"
requires-python = ">=3.12.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
